--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.data.mongodb.uri=mongodb://localhost/teacherly
-server.port=8080
-spring.data.mongodb.ssl.enabled=false
+spring.data.mongodb.uri=${spring.data.mongodb.uri}
+server.port=${server.port}
+spring.kafka.bootstrap-servers=${spring.kafka.bootstrap-servers}
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=divineWilson766@gmail.com
-spring.mail.password=ohwa nidl iemd biay
+spring.mail.host=${spring.mail.host}
+spring.mail.port=${spring.mail.port}
+spring.mail.username=${spring.mail.username}
+spring.mail.password=${spring.mail.password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
