--- a/pom.xml
+++ b/pom.xml
@@ -169,5 +169,11 @@
             <version>3.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.21</version> <!-- Or latest version -->
+        </dependency>
+
     </dependencies>
 </project>
